--- a/client/src/mobile/components/components/BackgroundGrid/BackgroundGrid.scss
+++ b/client/src/mobile/components/components/BackgroundGrid/BackgroundGrid.scss
@@ -10,7 +10,6 @@
   div {
     border-bottom: 1px dashed rgba(255, 255, 255, 0.5);
     border-right: 1px dashed rgba(255, 255, 255, 0.5);
-    background-color: black;
 
     &:nth-child(2n + 1) {
       border-right: 1px dashed rgba(255, 255, 255, 1);
