--- a/client/src/mobile/components/steps/ConclusionStep/ConclusionStep.scss
+++ b/client/src/mobile/components/steps/ConclusionStep/ConclusionStep.scss
@@ -7,11 +7,15 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100vh;
+  width: 100%;
   display: flex;
   z-index: 1;
+  overflow: hidden;
 
   &__cards {
-    height: 100%;
+    position: absolute;
+    height:100vh;
     width: 100%;
 
     &__card {
